--- a/roles/ossec/templates/preloaded_vars.conf
+++ b/roles/ossec/templates/preloaded_vars.conf
@@ -17,6 +17,6 @@ USER_UPDATE="y"
 
 ### Agent Installation variables. ###
 
-USER_AGENT_SERVER_IP="192.168.10.200"
+USER_AGENT_SERVER_IP="{{ server_ip }}"
 
 #### exit ? ###
